from enum import Enum


class Visibilite(Enum):
    PUBLIC = "PUBLIC"
    PRIVE = "PRIVE"
    PROTEGE = "PROTEGE"
    PAQUETAGE = "PAQUETAGE"
