@startuml
skinparam classAttributeIconSize 0

class Executeur {
  +cheminEntree : String
  +lancerTransformation(GroupeClass) : File
} 

package "Couche Analyse" {
	class DiagrammeClasse {
	 +getListeClasses() : List<Classe>
	}
	
	abstract class Classe {
	  +nom : {ID} String
	  +type : {ID} Type
	  +getClasse() : Classe
	}
}
package UML{
	class ClasseUML {
	  +nom : {ID} String
	  +estAbstraite : Boolean
	  +estInterface : Boolean
	  ---
	  +getAttributs() : List<Attribut>
	  +getOperations() : List<Operation>
	  +getRelations() : List<(ClasseUML,ClasseUML,Relation)>
	}

	ClasseUML "1" o-- "0..*" Attribut
	ClasseUML "1" o-- "0..*" Operation
	ClasseUML "2" o-- "0..*" Relation  : "{Liste des relations sortantes}"

	enum Visibilite {
	  PUBLIC
	  PRIVE
	  PROTEGE
	  PAQUETAGE
	}

	class Attribut {
	  +nom : {ID} String
	  +type : String
	  +visibilite : Visibilite
	}

	class Operation {
	  +nom : {ID} String
	  +typeRetour : String
	  +visibilite : Visibilite
	}

	class Relation {
	  +cardinaliteSource : int 
	  +roleSource : String 
	  +cardinaliteCible : int 
	  +roleCible : String
	}
	

	Classe <|--  ClasseUML : {Exclusif, incomplet}
	Classe "0..1" --* "1..*" DiagrammeClasse
	
	
	
	enum Type {
	  UML
	  CPP
	}
	
	enum Position {
	 NOTES_CLASSE
	 NOTES_OPERATION
	 NOTES_RELATION
	 NOTES_GRPCLASSE
	}
	
	interface Notes {
	 +emplacement : Position 
	 +contenu : String
	}
	ClasseUML ..|> Notes
	Relation ..|> Notes
	Operation ..|> Notes

}

package "Couche Generation" {
    abstract class Generateur {
        +cheminSortie : String
        +genererCode(DiagrammeClasse) : File 
    }

    class GenerateurJava {
        +genererCode(DiagrammeClasse) : File
    }

    class GenerateurCpp {
        +genererCode(DiagrammeClasse) : File
    }

    class GenerateurPython {
        +genererCode(DiagrammeClasse) : File
    }
    
    class GenerateurRust {
        +genererCode(DiagrammeClasse) : File
    }
    
    interface Commentaire {
        +contenu : String
        +genererBlocCommentaire() : String
    }
    
    Generateur ..|> Commentaire  
}

Executeur "1"  o-- "0..1" DiagrammeClasse
Executeur "1" o-- "0..*" Generateur

Generateur <|-- GenerateurJava
Generateur <|-- GenerateurCpp
Generateur <|-- GenerateurPython
Generateur <|-- GenerateurRust

package Cpp{
	class ClasseCpp{}
}

Classe <|-- "ClasseCpp" 
@enduml
